# textractor

./: README.md  requirements.txt  setup.cfg  setup.py  textractor.py
textractor/: textractor.py
