[metadata]
name = latextractor
version = 1.0.0
description = Extracting build-essential files from a LaTeX project and zip them.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    tex
    latex
    zip
maintainer = Christian Burkert
maintainer_email = textractor@cburkert.de
url = https://github.com/cburkert/textractor
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Software Development :: Version Control :: Git
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click>=7

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    textract = textractor.textractor:textract
